3005. Count Elements With Maximum Frequency Solution

--- a/leet.ipynb
+++ b/leet.ipynb
@@ -51,33 +51,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "e60f7686",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: 2, 2: 2, 3: 1, 4: 1}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [1, 2, 2, 3, 1, 4]\n",
+    "nums = [1, 2, 2, 2, 3, 1, 4, 1]\n",
     "\n",
-    "def max_freq(nums):\n",
-    "    freq = {}\n",
-    "    for num in nums:\n",
-    "        if num in freq:\n",
-    "            freq[num] += 1\n",
-    "        else:\n",
-    "            freq[num] = 1\n",
-    "            \n",
+    "def freq(nums):\n",
+    "    count = {}\n",
     "    \n",
-    "    print(freq)\n",
+    "    for i in nums:\n",
+    "        if i not in count:\n",
+    "            count[i] = 0\n",
+    "            # print(count)\n",
+    "        count[i] += 1\n",
     "    \n",
-    "max_freq(nums)"
+    "    max_frequency = max(count.values())\n",
+    "     \n",
+    "    total = 0\n",
+    "    for key, value in count.items():\n",
+    "        if value == max_frequency:\n",
+    "            total += max_frequency\n",
+    "    return total\n",
+    "                \n",
+    "freq(nums)"
    ]
   }
  ],
